# english-text-web-win-sdl3-c

./: CMakeLists.txt  README.md  config-web.bat  config-win.bat
src/: main.c
